progress on smithizing project stub

--- a/app/global/css/main.scss
+++ b/app/global/css/main.scss
@@ -10,7 +10,7 @@ body {
     font-size: 18px;
     font-weight: 200;
     line-height: 30px;
-    background-color: #eee;
+    background-color: #ddd;
     border-radius: 6px;
     padding: 60px;
     h1 {
