--- a/app/global/html/foot.ejs
+++ b/app/global/html/foot.ejs
@@ -1,4 +1,4 @@
-        <script data-main="js/config" src="bower_components/requirejs/require.js"></script>
+        <script data-main="global/js/config" src="bower_components/requirejs/require.js"></script>
 
 	</body>
 </html>
