--- a/app/global/html/head.ejs
+++ b/app/global/html/head.ejs
@@ -5,7 +5,8 @@
         <title>gulp bb test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/global/css/main.css">
 
+        <script src="/bower_components/modernizr/modernizr.js"></script>
     </head>
     <body>
